maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: not found: value à
	if(a<=getMondeLargeur() -1 && b<=getMondeHauteur() -1 && 0<=a && à <=b){true}else{false}
                                                                         ^